[package]
name = "wasm-tensorflow-models-pose-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde-wasm-bindgen = "0.6.1"
strum_macros = "0.25.3"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
[dependencies.web-sys]
version = "0.3.66"
features = ["console"]
